[gd_scene load_steps=12 format=3 uid="uid://cvfh80wygdck7"]

[ext_resource type="Script" path="res://scene/ui/sell_menu/sell_menu.gd" id="1_7ddv0"]
[ext_resource type="AudioStream" uid="uid://ws7dhpdi1ota" path="res://assets/audio/menucursormove.ogg" id="2_dr6lj"]
[ext_resource type="AudioStream" uid="uid://la2jigrl35c6" path="res://assets/audio/buy.ogg" id="3_cnhb5"]
[ext_resource type="Texture2D" uid="uid://cvybg47nt3bqp" path="res://assets/ui/Cursor.png" id="5_8batm"]
[ext_resource type="PackedScene" uid="uid://mdr0cluepn05" path="res://scene/ui/gold_panel_container/gold_panel_container.tscn" id="6_wmidw"]

[sub_resource type="Animation" id="Animation_t432t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_okek6"]
resource_name = "in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("ShopMarginContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(640, 0), Vector2(-10, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(640, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_432gv"]
_data = {
"RESET": SubResource("Animation_t432t"),
"in": SubResource("Animation_okek6")
}

[sub_resource type="Animation" id="Animation_gh6pq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShopMarginContainer/ShopMenu/Control/CursorParent/CursorHint:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8qc5g"]
resource_name = "oscillate"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShopMarginContainer/ShopMenu/Control/CursorParent/CursorHint:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-5, 0), Vector2(5, 0), Vector2(-5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqogr"]
_data = {
"RESET": SubResource("Animation_gh6pq"),
"oscillate": SubResource("Animation_8qc5g")
}

[node name="SellMenu" type="CanvasLayer"]
script = ExtResource("1_7ddv0")

[node name="MoveCursorAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dr6lj")
volume_db = -12.0
pitch_scale = 0.8

[node name="BuyItemAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cnhb5")
volume_db = -12.0
pitch_scale = 1.07

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_432gv")
}

[node name="CursorAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "oscillate"
libraries = {
"": SubResource("AnimationLibrary_sqogr")
}

[node name="ShopMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginContainerNPCMenu"

[node name="ShopMenu" type="PanelContainer" parent="ShopMarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ShopMarginContainer/ShopMenu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemContainer" type="VBoxContainer" parent="ShopMarginContainer/ShopMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="ShopMarginContainer/ShopMenu"]
layout_mode = 2

[node name="CursorParent" type="Control" parent="ShopMarginContainer/ShopMenu/Control"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = -5.0
offset_right = -5.0

[node name="CursorHint" type="TextureRect" parent="ShopMarginContainer/ShopMenu/Control/CursorParent"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8batm")

[node name="PlayerGoldMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 480
theme_override_constants/margin_top = 204
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 110

[node name="GoldPanelContainer" parent="PlayerGoldMarginContainer" node_paths=PackedStringArray("canvas_layer") instance=ExtResource("6_wmidw")]
layout_mode = 2
canvas_layer = NodePath("../..")
